fix overlapping of navigation items

--- a/css/style.css
+++ b/css/style.css
@@ -132,11 +132,10 @@ header {
     text-decoration: none;
     box-sizing: border-box;
     width: 100%;
-    height: 48px;
-    padding-left: 20px;
+    padding: 18px 10px 15px 20px;
 }
 .navigation-items + .navigation-items {
-    margin-top: 1rem;
+    margin-top: 10px;
 }
 .navigation-items:hover {
     background-color: rgba(177, 174, 174, 0.596);
@@ -146,6 +145,7 @@ header {
 }
 .navigation-items>p {
     padding: 15px 0 15px 20px;
+    width: 100%;
     color: black;
     font-family:Roboto,RobotoDraft,Helvetica,Arial,sans-serif;
     font-size: 15px;
